waybar/style.css
@import "mocha.css";

* {
  font-family: "JetBrainsMono Nerd Font";
  border: 0px;
  padding: 0;
  margin: 0;
  min-height: 10px;
  font-weight: 900;
  font-size: 12px;
  color: @text;
  transition: all 0.3s ease;
}

window#waybar {
  background: transparent;
}

window > box {
}

#workspaces {
  background-color: @surface0;
  margin: 5px;
}

#workspaces label {
  color: @pink;
  padding-right: 10px;
  padding-left: 5px;
}

#workspaces button.active label {
  color: @surface0;
  font-weight: bolder;
}

#workspaces button.active {
  background-color: @pink;
  border-radius: 0px;
}

#clock {
  background-color: @surface0;
  padding: 1px 10px;
  margin: 5px 5px 5px 0;
  color: @pink;
}

#network,
#backlight,
#backlight-slider,
#pulseaudio,
#pulseaudio-slider,
#battery {
  background-color: @surface0;
  padding: 1px 10px;
  margin: 5px 0;
}

#network {
  color: @sapphire;
}

#backlight {
  color: @peach;
}

#pulseaudio {
  color: @mauve;
}

#battery {
  margin-right: 5px;
}

@keyframes blink {
  to {
    opacity: 0.7;
    font-size: 12px;
  }
}

#battery.critical:not(.charging) {
  opacity: 1;
  font-size: 15px;
  animation-name: blink;
  animation-duration: 0.5s;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
  animation-direction: alternate;
}

#pulseaudio-slider,
#backlight-slider {
  padding-left: 10px;
}

slider {
  min-height: 8px;
  min-width: 8px;
  opacity: 0;
  background-image: none;
  border: none;
  box-shadow: none;
  background-color: @lavender;
}

trough {
  min-height: 5px;
  min-width: 80px;
  border-radius: 2px;
  background-color: @surface1;
}

highlight {
  min-height: 5px;
  border-radius: 5px;
  background-color: @lavender;
}

/* NO CAMBIA EL COLOR DEL SLIDER */

#custom-playerctl {
  background-color: @surface0;
  padding: 1px 10px;
  margin: 5px 0;
  border-radius: 8px;
  margin-right: 10px;
}

